<resources>
    <string name="app_name">Gate Keeper</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>

    <string name="my_logins">Logins</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="my_devices">Device History</string>
    <string name="about">About</string>
    <string name="cards">Cards</string>
    <string name="notes">Notes</string>
    <string name="ids">IDs</string>
    <string name="logout">Logout</string>

    <string name="encryption_copyright"><![CDATA[Gate Keeper uses a combination of AES GCM & AES CBC encryption algorithms to store your data safely on your device and on Google Firebase cloud.]]></string>
    <string name="auth_type_biometric_description">Device will use Android Biometric authentication to securely log you to Gate Keeper.</string>
    <string name="auth_type_pin_description">Device will use a PIN to securely log you to Gate Keeper.</string>
    <string name="auth_type_password_description"><![CDATA[Device will use you username & password to securely log you to Gate Keeper.]]></string>
    <string name="login_action_copy">When you click on a login item, password will automatically be copied to device clipboard.</string>
    <string name="login_action_open">When you click on a login item, this item will open to view more detailed data.</string>
    <string name="please_setup_your_pin">Please setup your PIN</string>
    <string name="welcome">Welcome!</string>
    <string name="flaticon_attribution">Icons downloaded by www.flaticon.com</string>
    <string name="gate_keeper_version">Gate Keeper v1.0.0</string>
    <string name="save_username">Save Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="vaults_explanation">Vaults are the main storage categorization area for your data. You can create multiple Vaults for Personal, Work, School, etc use</string>
    <string name="no_cards_message">Your currently have no cards saved in this vault.</string>
    <string name="no_cards_title">No Cards</string>
    <string name="add">Add</string>
    <string name="no_logins_title">No Logins</string>
    <string name="no_logins_message">Your currently have no logins saved in this vault.</string>
    <string name="no_notes_message">Your currently have no notes saved in this vault.</string>
    <string name="no_notes_title">No Notes</string>
    <string name="card_deleted">Card successfully deleted</string>
    <string name="card_created">Card successfully created</string>
    <string name="card_updated">Card successfully updated</string>
    <string name="delete_card">Delete Card</string>
    <string name="flip_card">Flip Card</string>
    <string name="card_alias">Card Alias</string>
    <string name="select_vault">Select Vault</string>
    <string name="personal">Personal</string>
    <string name="cvv">CVV</string>
    <string name="update_account_details">Update Account Details</string>
    <string name="you_are_secured">You are secured</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="free_plan_description">Sync your data across your devices\n\nSave up to 20 passwords to your account\n\nSave up to 1 card to your account\n\nSave up to 5 notes to your account</string>
    <string name="monthly_plan_description">Sync your data across your devices\n\nEnjoy Ad-free experience\n\nSave unlimited passwords, cards &amp; notes to your account\n\n</string>
    <string name="yearly_plan_description">Charged XX yearly\n\nSync your data across your devices\n\nEnjoy Ad-free experience\n\nSave unlimited passwords, cards &amp; notes to your account\n\n</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
